# aicache

./: .gitignore  Makefile  README.md  install_dependencies.py  plan200426.md  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
docs/: COVERAGE_RATCHET.md  SDK_QUICKSTART.md
docs/adr/: 0001-python-cache-kernel.md
examples/: bench_kernel.py  claude_code_agent_demo.py
src/aicache/: __init__.py  cache_factory.py  config.py  installer.py  mcp_server.py  modern_cli.py  security.py
src/aicache/application/: __init__.py  orchestration.py  prompt_cache_service.py  schemas.py  use_cases.py  use_cases_toon.py
src/aicache/core/: __init__.py  cache.py
src/aicache/domain/: __init__.py  models.py  ports.py  prompt_caching.py  services.py  toon.py  toon_service.py
src/aicache/infrastructure/: __init__.py  adapters.py  container.py  mcp_server.py  mcp_server_2026.py  semantic_adapters.py  telemetry.py  toon_adapters.py
src/aicache/integrations/: __init__.py  _common.py  anthropic.py  openai.py
src/aicache/plugins/: __init__.py  base.py  claude.py  openai.py
tests/: test_architecture.py  test_cli.py  test_comprehensive.py  test_container.py  test_mcp_server.py  test_orchestration_2026.py  test_prompt_caching_2026.py  test_schemas_2026.py  test_semantic.py  test_telemetry.py  test_toon.py
tests/integrations/: test_anthropic.py  test_openai.py
